Add categories to IP sweeper post

--- a/_posts/2020-10-23-tidyhackr-building-an-ip-sweeper-with-r/tidyhackr-building-an-ip-sweeper-with-r.Rmd
+++ b/_posts/2020-10-23-tidyhackr-building-an-ip-sweeper-with-r/tidyhackr-building-an-ip-sweeper-with-r.Rmd
@@ -6,6 +6,9 @@ author:
   - name: Stefan Stein
     url: {}
 date: 11-20-2020
+categories:
+  - R
+  - infosec
 output:
   distill::distill_article:
     self_contained: false
